src/test/deca/context/valid/tests/23_Divide.deca
// Description:
//    Test pour les opérations (divide)
//
// Historique:
//    cree le 16/01/2022

{
    int x = 1;
    x = 1 / x;
}
