src/test/deca/context/invalid/40_NonObjectCall.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 13: ContextualError: object isn't a class
// 
// Historique:
//    cree le 01/01/2022

{
   int a = 1;
   // Doit etre refuse.
   int x = a.f();
}
